--- a/learning-labs/modules/jte-primitives/pages/5-keywords.adoc
+++ b/learning-labs/modules/jte-primitives/pages/5-keywords.adoc
@@ -3,49 +3,49 @@
 
 == What is a Keyword?
 
-Keywords allow you to define variables in the Pipeline Configuration that can be referenced in your Pipeline Template. This allows you to keep templates as readable as possible by externalizing the definition of complex variables like regular expressions out of the template.
+Keywords allow you to define variables in the pipeline configuration that can be referenced in your Pipeline Template. This allows you to keep templates as readable as possible by externalizing the definition of complex variables out of the template.
 
-The most common use case so far for Keywords is storing regular expressions that map to common branch names in the {git-flow}[GitFlow Branching Strategy] to be used in evaluating whether or not aspects of the pipeline should execute.
+The most common use case so far for Keywords is storing regular expressions that map to common branch names in the {git-flow}[GitFlow Branching Strategy] to be used in evaluating whether or not aspects of the pipeline should execute based on a matching branch.
 
 In this example, we'll use a Keyword as a feature flag externalized from the Pipeline Template to conditionally determine if a manual gate is required before the deployment to Production.
 
 [NOTE]
 ====
-xref:jte:primitives:keywords.adoc[View the Keyword documentation]
+xref:jte:primitives:keywords.adoc[View the Keyword documentation here.]
 ====
 
-== Define and Use A Keyword
+== Define and Use a Keyword
 
 === Define the Keyword in the Pipeline Configuration
 
-Update the *Pipeline Configuration* to:
+For your `single-job` configuration, update the *Pipeline Configuration* to:
 
 [source,groovy]
 ----
-libraries{
+libraries {
     maven
     sonarqube
     ansible
 }
 
-stages{
-    continuous_integration{
+stages {
+    continuous_integration {
         build
         static_code_analysis
     }
 }
 
-application_environments{
-    dev{
+application_environments {
+    dev {
         ip_addresses = [ "0.0.0.1", "0.0.0.2" ]
     }
-    prod{
+    prod {
         long_name = "Production" 
         ip_addresses = [ "0.0.1.1", "0.0.1.2", "0.0.1.3", "0.0.1.4" ]
     }
 }
 
-keywords{
+keywords {
     requiresApproval = true 
 }
 ----
@@ -68,13 +68,13 @@ Update the *Pipeline Template* to:
 continuous_integration() 
 deploy_to dev 
 
-if(requiresApproval){
+if(requiresApproval) {
     timeout(time: 5, unit: 'MINUTES') {
         input 'Approve the deployment?'
     }
 }
 
-deploy_to prod 
+deploy_to prod
 ----
 
 [IMPORTANT]
@@ -86,53 +86,44 @@ We would recommend that, in practice, the deployment library inherits this manua
 
 === Run the Pipeline
 
-From the Pipeline job's main page, click `Build Now` in the left-hand navigation menu.
+From the Pipeline Job's main page, click `Build Now` in the left-hand navigation menu.
 
-When viewing the build logs, you should see output similar to:
+When viewing the build logs (click Build number, then `Console Output`), you should see output similar to:
 
 [source,text]
 ----
-[Pipeline] Start of Pipeline
+Started by user admin
 [JTE] Pipeline Configuration Modifications (show)
-[JTE] Loading Library maven (show)
-[JTE] Library maven does not have a configuration file.
-[JTE] Loading Library sonarqube (show)
-[JTE] Library sonarqube does not have a configuration file.
-[JTE] Loading Library ansible (show)
-[JTE] Library ansible does not have a configuration file.
 [JTE] Obtained Pipeline Template from job configuration
-[Pipeline] node
-Running on Jenkins in /var/jenkins_home/workspace/single-job
-[Pipeline] {
-[Pipeline] writeFile
-[Pipeline] archiveArtifacts
-Archiving artifacts
-[Pipeline] }
-[Pipeline] // node
-[JTE] [Stage - continuous_integration]
-[JTE] [Step - maven/build.call()]
+[JTE] Loading Library maven (show)
+[JTE] Loading Library sonarqube (show)
+[JTE] Loading Library ansible (show)
+[JTE] Template Primitives are overwriting Jenkins steps with the following names: (show)
+[Pipeline] Start of Pipeline
+[JTE][Stage - continuous_integration]
+[JTE][Step - maven/build.call()]
 [Pipeline] stage
 [Pipeline] { (Maven: Build)
 [Pipeline] echo
 build from the maven library
 [Pipeline] }
 [Pipeline] // stage
-[JTE] [Step - sonarqube/static_code_analysis.call()]
+[JTE][Step - sonarqube/static_code_analysis.call()]
 [Pipeline] stage
 [Pipeline] { (SonarQube: Static Code Analysis)
 [Pipeline] echo
 static code analysis from the sonarqube library
 [Pipeline] }
 [Pipeline] // stage
-[JTE] [Step - ansible/deploy_to.call(ApplicationEnvironment)]
+[JTE][Step - ansible/deploy_to.call(ApplicationEnvironment)]
 [Pipeline] stage
-[Pipeline] { (Deploy To: dev)
+[Pipeline] { (Deploy to: dev)
 [Pipeline] echo
-performing a deployment through ansible..
+Performing a deployment through Ansible..
 [Pipeline] echo
-deploying to 0.0.0.1
+Deploying to 0.0.0.1
 [Pipeline] echo
-deploying to 0.0.0.2
+Deploying to 0.0.0.2
 [Pipeline] }
 [Pipeline] // stage
 [Pipeline] timeout
@@ -141,22 +132,27 @@ Timeout set to expire in 5 min 0 sec
 [Pipeline] input
 Approve the deployment?
 Proceed or Abort
+----
+
+Click the `Proceed` link and the job should continue, showing `Approved by admin`:
+[source,text]
+----
 Approved by admin
 [Pipeline] }
 [Pipeline] // timeout
-[JTE] [Step - ansible/deploy_to.call(ApplicationEnvironment)]
+[JTE][Step - ansible/deploy_to.call(ApplicationEnvironment)]
 [Pipeline] stage
-[Pipeline] { (Deploy To: Production)
+[Pipeline] { (Deploy to: Production)
 [Pipeline] echo
-performing a deployment through ansible..
+Performing a deployment through Ansible..
 [Pipeline] echo
-deploying to 0.0.1.1
+Deploying to 0.0.1.1
 [Pipeline] echo
-deploying to 0.0.1.2
+Deploying to 0.0.1.2
 [Pipeline] echo
-deploying to 0.0.1.3
+Deploying to 0.0.1.3
 [Pipeline] echo
-deploying to 0.0.1.4
+Deploying to 0.0.1.4
 [Pipeline] }
 [Pipeline] // stage
 [Pipeline] End of Pipeline
